k8s/frontend-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-depl
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend-cont
          image: aravinds10/frontend:23148125963
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          # env:
          #   - name: REACT_APP_API_URL
          #     value: "http://backend-service:5000"
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 80
